# convoluta.github.io

./: README.md  build.py  index.html  pyproject.toml  scripts.py
src/: _template.html  index.css  index.md
