[tool.poetry]
name = "convoluta.github.io"
version = "0.1.0"
description = "Website for Convoluta"
authors = ["Kevin Feng"]
license = "GPL-3.0-or-later"
packages = [{include = "./build.py"}]

[tool.poetry.dependencies]
python = "^3.6"
Markdown = "^3.3.3"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[tool.poetry.scripts]
format = "scripts:format"
build = "scripts:build"
start = "scripts:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
